--- a/.github/workflows/build_pkg.yml
+++ b/.github/workflows/build_pkg.yml
@@ -1,4 +1,4 @@
-name: Build PyLabel macOS Package
+name: Build macOS Package
 
 on:
   push:
@@ -18,49 +18,66 @@ jobs:
         with:
           python-version: '3.11.9'
 
+      - name: Create MacInstall.sh script
+        run: |
+          mkdir -p Scripts
+          cat << 'EOF' > Scripts/MacInstall.sh
+          #!/bin/bash
+
+          # Set the installation directory to User's Applications
+          PROGRAM_FILES="/Applications/PyLabel"
+
+          # Create the directory if it doesn't exist
+          if [ ! -d "$PROGRAM_FILES" ]; then
+              mkdir -p "$PROGRAM_FILES"
+          fi
+
+          # Copy application files
+          cp -R "${0%/*}/PyLabelProgramFiles/" "$PROGRAM_FILES/"
+
+          # Grant permissions
+          chmod -R 755 "$PROGRAM_FILES"
+
+          # Check for Python 3.11.9
+          found_python=false
+          for py_path in $(which -a python3); do
+              py_version=$($py_path --version 2>&1)
+              if [[ $py_version == "Python 3.11.9" ]]; then
+                  found_python=true
+                  break
+              fi
+          done
+
+          if [ "$found_python" = true ]; then
+              # Install dependencies
+              "$py_path" -m ensurepip
+              "$py_path" -m pip install --upgrade pip
+              "$py_path" -m pip install -r "$PROGRAM_FILES/requirements.txt"
+
+              # Set up PyLabel command
+              echo "#!/bin/bash" > /usr/local/bin/PyLabel
+              echo "\"$py_path\" \"$PROGRAM_FILES/PyLabel.py\" \"\$@\"" >> /usr/local/bin/PyLabel
+              chmod +x /usr/local/bin/PyLabel
+          else
+              echo "Python 3.11.9 is not installed."
+              open "$PROGRAM_FILES/PyInstructions.pdf"
+              exit 1
+          fi
+
+          echo "Installation complete. You can now use the command 'PyLabel' from any directory"
+          EOF
+          chmod +x Scripts/MacInstall.sh
+
       - name: Install dependencies
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install -r PyLabelProgramFiles/requirements.txt
 
-      - name: Create MacInstall.sh script
-        run: |
-          mkdir -p Scripts
-          echo '#!/bin/bash' > Scripts/MacInstall.sh
-          echo 'PROGRAM_FILES="/Applications/PyLabel"' >> Scripts/MacInstall.sh
-          echo 'if [ ! -d "$PROGRAM_FILES" ]; then' >> Scripts/MacInstall.sh
-          echo '    mkdir -p "$PROGRAM_FILES"' >> Scripts/MacInstall.sh
-          echo 'fi' >> Scripts/MacInstall.sh
-          echo 'cp -R "${0%/*}/PyLabelProgramFiles/" "$PROGRAM_FILES/"' >> Scripts/install.sh
-          echo 'chmod -R 755 "$PROGRAM_FILES"' >> Scripts/MacInstall.sh
-          echo 'found_python=false' >> Scripts/MacInstall.sh
-          echo 'for py_path in $(which -a python3); do' >> Scripts/MacInstall.sh
-          echo '    py_version=$($py_path --version 2>&1)' >> Scripts/MacInstall.sh
-          echo '    if [[ $py_version == "Python 3.11.9" ]]; then' >> Scripts/MacInstall.sh
-          echo '        found_python=true' >> Scripts/MacInstall.sh
-          echo '        break' >> Scripts/MacInstall.sh
-          echo '    fi' >> Scripts/MacInstall.sh
-          echo 'done' >> Scripts/MacInstall.sh
-          echo 'if [ "$found_python" = true ]; then' >> Scripts/MacInstall.sh
-          echo '    "$py_path" -m ensurepip' >> Scripts/MacInstall.sh
-          echo '    "$py_path" -m pip install --upgrade pip' >> Scripts/install.sh
-          echo '    "$py_path" -m pip install -r "$PROGRAM_FILES/requirements.txt"' >> Scripts/MacInstall.sh
-          echo '    echo "#!/bin/bash" > /usr/local/bin/PyLabel' >> Scripts/MacInstall.sh
-          echo '    echo "\"$py_path\" \"$PROGRAM_FILES/PyLabel.py\" \"\$@\"" >> /usr/local/bin/PyLabel' >> Scripts/MacInstall.sh
-          echo '    chmod +x /usr/local/bin/PyLabel' >> Scripts/MacInstall.sh
-          echo 'else' >> Scripts/MacInstall.sh
-          echo '    echo "Python 3.11.9 is not installed."' >> Scripts/MacInstall.sh
-          echo '    open "$PROGRAM_FILES/PyInstructions.pdf"' >> Scripts/MacInstall.sh
-          echo '    exit 1' >> Scripts/MacInstall.sh
-          echo 'fi' >> Scripts/MacInstall.sh
-          echo 'echo "Installation complete. You can now use the command 'PyLabel' from any directory"' >> Scripts/MacInstall.sh
-          chmod +x Scripts/MacInstall.sh
-
       - name: Create the component package
         run: |
           pkgbuild --root PyLabelProgramFiles \
                    --scripts Scripts \
-                   --identifier com.yourcompany.pylabel \
+                   --identifier com.LevittConsultingPtyLtd.pylabel \
                    --version 1.0 \
                    --install-location /Applications/PyLabel \
                    pylabel.pkg
