--- a/.github/workflows/build_pkg.yml
+++ b/.github/workflows/build_pkg.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           python-version: '3.11.9'
 
-      - name: Create MacInstall.sh script
+      - name: Create install.sh script
         run: |
           mkdir -p Scripts
-          cat << 'EOF' > Scripts/MacInstall.sh
+          cat << 'EOF' > Scripts/install.sh
           #!/bin/bash
 
           # Set the installation directory to User's Applications
@@ -66,7 +66,7 @@ jobs:
 
           echo "Installation complete. You can now use the command 'PyLabel' from any directory"
           EOF
-          chmod +x Scripts/MacInstall.sh
+          chmod +x Scripts/install.sh
 
       - name: Install dependencies
         run: |
@@ -80,9 +80,29 @@ jobs:
                    --identifier com.LevittConsultingPtyLtd.pylabel \
                    --version 1.0 \
                    --install-location /Applications/PyLabel \
-                   pylabel.pkg
+                   MacInstall.pkg
 
-      - name: Create the distribution package
+      - name: Create distribution.xml
+        run: |
+          cat << 'EOF' > distribution.xml
+          <?xml version="1.0" encoding="utf-8"?>
+          <installer-gui-script minSpecVersion="1">
+              <title>PyLabel Installer</title>
+              <options customize="never" require-scripts="true"/>
+              <choices-outline>
+                  <line choice="default">
+                      <line choice="pylabel"/>
+                  </line>
+              </choices-outline>
+              <choice id="default"/>
+              <choice id="pylabel" visible="false" title="PyLabel">
+                  <pkg-ref id="com.LevittConsultingPtyLtd.pylabel"/>
+              </choice>
+              <pkg-ref id="com.LevittConsultingPtyLtd.pylabel" version="1.0" onConclusion="none">file:MacInstall.pkg</pkg-ref>
+          </installer-gui-script>
+          EOF
+
+      - name: Build the final package
         run: |
           productbuild --distribution distribution.xml \
                        --resources Resources \
