--- a/.github/workflows/build_pkg.yml
+++ b/.github/workflows/build_pkg.yml
@@ -98,7 +98,7 @@ jobs:
               <choice id="pylabel" visible="false" title="PyLabel">
                   <pkg-ref id="com.LevittConsultingPtyLtd.pylabel"/>
               </choice>
-              <pkg-ref id="com.LevittConsultingPtyLtd.pylabel" version="1.0" onConclusion="none">file:MacInstall.pkg</pkg-ref>
+              <pkg-ref id="com.LevittConsultingPtyLtd.pylabel" version="1.0" onConclusion="none">file:./MacInstall.pkg</pkg-ref>
           </installer-gui-script>
           EOF
 
