--- a/.github/workflows/build_pkg.yml
+++ b/.github/workflows/build_pkg.yml
@@ -12,11 +12,26 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.11.9'
+
+      - name: Cache Python packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r PyLabelProgramFiles/requirements.txt
 
       - name: Create install.sh script
         run: |
@@ -67,11 +82,6 @@ jobs:
           echo "Installation complete. You can now use the command 'PyLabel' from any directory"
           EOF
           chmod +x Scripts/install.sh
-
-      - name: Install dependencies
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install -r PyLabelProgramFiles/requirements.txt
 
       - name: List files before pkgbuild
         run: |
@@ -141,8 +151,8 @@ jobs:
 
       - name: Commit and push .pkg file
         env:
-          GH_PAT: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add PyLabelInstaller.pkg
-          git commit -m "Add PyLabelInstaller.pkg"
-          git push -u origin main
+          git commit -m "Add MacInstall.pkg"
+          git push
