--- a/.github/workflows/build_pkg.yml
+++ b/.github/workflows/build_pkg.yml
@@ -91,12 +91,15 @@ jobs:
 
       - name: Create the component package
         run: |
+          START_TIME=$(date +%s)
           pkgbuild --root PyLabelProgramFiles \
                    --scripts Scripts \
                    --identifier com.LevittConsultingPtyLtd.pylabel \
                    --version 1.0 \
                    --install-location /Applications/PyLabel \
                    MacInstall.pkg
+          END_TIME=$(date +%s)
+          echo "pkgbuild duration: $(($END_TIME - $START_TIME)) seconds"
 
       - name: List files after pkgbuild
         run: |
@@ -132,11 +135,14 @@ jobs:
 
       - name: Build the final package
         run: |
+          START_TIME=$(date +%s)
           productbuild --distribution distribution.xml \
                        --resources Resources \
                        --package-path . \
                        --version 1.0 \
                        MacInstall.pkg
+          END_TIME=$(date +%s)
+          echo "productbuild duration: $(($END_TIME - $START_TIME)) seconds"
 
       - name: List files after productbuild
         run: |
@@ -153,6 +159,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git add PyLabelInstaller.pkg
+          git add MacInstall.pkg
           git commit -m "Add MacInstall.pkg"
           git push
